- added some code for shift and shiftscheduler - testing is remaining